Added border and text in div

--- a/07.01-206-divs-flexbox-starter/index.html
+++ b/07.01-206-divs-flexbox-starter/index.html
@@ -23,13 +23,15 @@
 
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born in Brooklyn, New York. I have a really<br> big family three
+                sisters and one brother and I am<br>the second to youngest.
             </div>
             <div class="div-2">
-                Div 2
+                My Passion: I love art! All types of art! I love to<br>draw and paint.
+                I am into the more urban kind<br> of art, but art of all kind including poetry is<br> one of my passions.
             </div>
             <div class="div-3">
-                Div 3
+                Fun fact: I design t-shirts, hats, shoes, and<br> decals on my own time.
             </div>
         </section>
 
