--- a/07.01-206-divs-flexbox-starter/index.html
+++ b/07.01-206-divs-flexbox-starter/index.html
@@ -17,22 +17,33 @@
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
+      <section class="flex-container">
+      <header>
+      <h1><span> Hi.</span> I'm Charlie.
+      </header>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <section class="wrapper">
-            <div class="div-1">
-                I was born in Brooklyn, New York. I have a really<br> big family three
-                sisters and one brother and I am<br>the second to youngest.
+        <main>
+          <p> I am a <span>Front End Developer</span> and when I am not thriving off of art you can find me writing,
+            or reading a romance novel based in the early 1900s.</p>
+        </main>
+            <div id="div-1" class="flex-items">
+                <p>I was born in <span>Brooklyn, New York.</span><br>I have a really big family three
+                sisters<br>and one brother and I am the second to <br>youngest.</p>
             </div>
-            <div class="div-2">
-                My Passion: I love art! All types of art! I love to<br>draw and paint.
-                I am into the more urban kind<br> of art, but art of all kind including poetry is<br> one of my passions.
+            <div id="div-2" class="flex-items">
+                <p><span>My Passion:</span> I love art! All types of art! I love to<br> draw and paint.
+                I am into the more urban kind of art, but art of all kind including poetry is<br> one of my passions.</span>
             </div>
-            <div class="div-3">
-                Fun fact: I design t-shirts, hats, shoes, and<br> decals on my own time.
+            <div id="div-3" class="flex-items">
+                <p><span>Fun fact:</span> I design t-shirts, hats,<br>shoes, and decals on my own time.</p>
             </div>
+            <footer>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-pinterest"></i>
+           </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
