--- a/07.01-206-divs-flexbox-starter/index.html
+++ b/07.01-206-divs-flexbox-starter/index.html
@@ -15,6 +15,12 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     </head>
     <body>
       <section class="flex-container">
@@ -33,23 +39,21 @@
                 sisters<br>and one brother and I am the second to <br>youngest.</p>
             </div>
             <div id="div-2" class="flex-items">
-                <p><span>My Passion:</span> I love art! All types of art! I love to<br> draw and paint.
-                I am into the more urban kind of art, but art of all kind including poetry is<br> one of my passions.</span>
+                <p><span>My Passion:</span> I love art! All types of art!<br> I love to draw and paint.
+                I am into the more <br>urban kind of art, but art of all kind including poetry is one of my passions.</span>
             </div>
             <div id="div-3" class="flex-items">
                 <p><span>Fun fact:</span> I design t-shirts, hats,<br>shoes, and decals on my own time.</p>
             </div>
+
             <footer>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-pinterest"></i>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
            </footer>
         </section>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
